--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "doctrine/dbal": "^2.8",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "miladrahimi/larajwt": "2.*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
